# artifactsmmo-openapi

./: Cargo.toml  README.md  gen.sh  openapi.json
.openapi-generator/: FILES
docs/: AccountAchievementSchema.md  AccountDetails.md  AccountLeaderboardSchema.md  AccountLeaderboardType.md  AccountsApi.md  AchievementSchema.md  AchievementType.md  AchievementsApi.md  ActionItemBankResponseSchema.md  ActionType.md  ActiveEventSchema.md  AddAccountSchema.md  AddCharacterSchema.md  AnnouncementSchema.md  BadgeConditionSchema.md  BadgeSchema.md  BadgesApi.md  BankExtensionSchema.md  BankItemSchema.md  BankItemTransactionSchema.md  BankSchema.md  BaseAchievementSchema.md  BaseachievementResponseSchema.md  BlockedHitsSchema.md  ChangePassword.md  CharacterFightDataSchema.md  CharacterLeaderboardSchema.md  CharacterLeaderboardType.md  CharacterMovementDataSchema.md  CharacterSchema.md  CharacterSkin.md  CharactersApi.md  ConditionOperator.md  CooldownSchema.md  CraftSchema.md  CraftingSchema.md  DataPageAccountAchievementSchema.md  DataPageAccountLeaderboardSchema.md  DataPageAchievementSchema.md  DataPageActiveEventSchema.md  (+98 more)
src/apis/: accounts_api.rs  achievements_api.rs  badges_api.rs  characters_api.rs  configuration.rs  default_api.rs  effects_api.rs  events_api.rs  grand_exchange_api.rs  items_api.rs  leaderboard_api.rs  maps_api.rs  mod.rs  monsters_api.rs  my_account_api.rs  my_characters_api.rs  npcs_api.rs  resources_api.rs  server_details_api.rs  simulation_api.rs  tasks_api.rs  token_api.rs
src/models/: access_schema.rs  account_achievement_schema.rs  account_details.rs  account_details_schema.rs  account_leaderboard_schema.rs  account_leaderboard_type.rs  account_status.rs  achievement_rewards_schema.rs  (+222 more)
